# CausalMan

./: .gitignore  3rd-party-licenses.txt  README.md  pyproject.toml  requirements-optional.txt  requirements.txt
pre_generated_datasets/causalman_large/: causalman_large_ground_truth_admg.graphml  causalman_large_ground_truth_mag.graphml
pre_generated_datasets/causalman_medium/: causalman_medium_ground_truth_admg.graphml  causalman_medium_ground_truth_mag.graphml
pre_generated_datasets/causalman_micro/: causalman_micro_do(PF_M1_T1_Force=16000.0).csv  causalman_micro_do(PF_M1_T1_Force=30000.0).csv  causalman_micro_do(PF_M1_T1_Force_LTL=15000.0).csv  causalman_micro_do(PF_M1_T1_Force_LTL=18000.0).csv  causalman_micro_ground_truth_admg.graphml  causalman_micro_ground_truth_mag.graphml  observational.csv
pre_generated_datasets/causalman_small/: causalman_small_do(PF_M1_T1_Force=16000.0).csv  causalman_small_do(PF_M1_T1_Force=30000.0).csv  causalman_small_do(PF_M1_T1_Force_LTL=15000.0).csv  causalman_small_do(PF_M1_T1_Force_LTL=18000.0).csv  causalman_small_ground_truth_admg.graphml  causalman_small_ground_truth_mag.graphml  observational.csv
src/: causal_inference_data_generation.ipynb  causalman.py  causalman_causal_inference_data_generation.ipynb  causalman_rca_data_generation.ipynb  col_masking.py  example_observational.ipynb  fcm.py  generate_causal_inference_data.py  graph_plotter.py  graph_projections.py  interventions_example.ipynb  marginalization.py  node.py  rca_data_generation.ipynb  sample_batch.py
src/FCM_Definitions/: parallel_section.py
(+601 files in other folders)
