[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "causalman"
version = "0.1.0"
description = "Causal inference simulator for manufacturing process systems"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "sympy>=1.12",
    "numpy>=1.24",
    "pandas>=1.5",
    "networkx>=3.0",
    "pyvis>=0.3",
    "matplotlib>=3.6",
    "tqdm>=4.64",
]

[project.optional-dependencies]
graph-layout = ["pygraphviz>=1.10"]
png-export  = ["playwright>=1.40"]
r-dagitty   = ["rpy2>=3.5"]
all = [
    "causalman[graph-layout]",
    "causalman[png-export]",
    "causalman[r-dagitty]",
]

[tool.hatch.build.targets.wheel]
packages = ["causalman"]

[tool.hatch.build.targets.wheel.sources]
"causalman" = "causalman"

[tool.hatch.build.targets.wheel.force-include]
# dataset_objects/ is under causalman/ so it is picked up automatically;
# no extra force-include needed.

[tool.hatch.build]
include = [
    "causalman/**/*.py",
    "causalman/dataset_objects/**",
]
